--- a/styles/youtube-tweaks.user.css
+++ b/styles/youtube-tweaks.user.css
@@ -1,6 +1,6 @@
 /* ==UserStyle==
 @name        YouTube Tweaks
-@version     1.0.4
+@version     1.0.5
 @namespace   dnlj
 @author      dnlj
 @homepageURL https://github.com/dnlj/UserTweaks
@@ -8,25 +8,61 @@
 ==/UserStyle== */
 
 @-moz-document url-prefix("https://www.youtube.com/feed/subscriptions") {
-    /* Fix the 600px wide video icons */
+    /* Fix the video icons begin 600px wide */
     #contents * {
-        --ytd-rich-grid-item-max-width: 250px !important;
-        --ytd-rich-grid-item-min-width: 200px !important; 
+        --ytd-rich-grid-item-max-width: 200px !important;
+        --ytd-rich-grid-item-min-width: 100px !important;
+        --ytd-rich-grid-items-per-row: 5;
+        --ytd-rich-grid-posts-per-row: 5;
+        /*--ytd-channel-name-text-font-size: 12px;*/
+        /*font-size: 0.9em;*/
+    }
+    
+    ytd-rich-grid-row,
+    #contents.ytd-rich-grid-row {
+        display: contents !important;
     }
     
     ytd-two-column-browse-results-renderer {
-        max-width: 1850px;
+        max-width: 1100px;
+    }
+    
+    /** Fix font size */
+    #meta.ytd-rich-grid-media {
+        padding: 0;
+    }
+    
+    #avatar-link {
+        position: absolute;
+        right: 0;
+        bottom:0;
+        z-index: 999;
+        border: 1px solid #FFF;
+        border-radius: 999vh;
+        margin:0;
+        padding:0;
+    }
+    
+    #video-title
+    {
+        font-size: 1.2em !important;
+        line-height: 1.3 !important;
+    }
+    .inline-metadata-item,
+    #text.ytd-channel-name
+    {
+        font-size: 0.9em !important;
     }
     
 	/** Hide the first two elements in the paper-menu */
-	#items > .ytd-menu-popup-renderer.style-scope:not(:last-of-type) {
+	#items > .ytd-menu-popup-renderer.style-scope:not(:last-child) {
 		visibility: hidden;
 		min-height: 0;
 		height: 0;
 	}
     
     /** Fix the padding around the paper-menu */
-    #items > .ytd-menu-popup-renderer.style-scope:last-of-type {
+    #items > .ytd-menu-popup-renderer.style-scope:last-child {
         height: 48px;
         justify-content: center;
     }
@@ -59,4 +95,36 @@
     {
         border-radius: 0px !important;
     }
+    
+    /* Fix search suggestions taking 5x the needed space*/
+    .ytSuggestionComponentLargerSuggestion {
+    	height: 1.75em;
+    }
+}
+
+@-moz-document url-prefix("https://www.youtube.com/watch") {
+    /** Full height live chat */
+    #chat {
+        --ytd-watch-flexy-chat-max-height: calc(100vh - 100px);
+        min-height: 0 !important;
+        /*position: fixed;
+        top: 60px;
+        right: 0;*/
+        width: 500px;
+    }
+    
+    /** Playback speed order */
+    .ytp-panel-menu {
+        display: flex;
+        flex-direction: column;
+    }
+    
+    /*.ytp-menuitem:nth-of-type(1) { order: 1; }
+    .ytp-menuitem:nth-of-type(2) { order: 2; }
+    .ytp-menuitem:nth-of-type(3) { order: 3; }
+    .ytp-menuitem:nth-of-type(4) { order: 4; }
+    .ytp-menuitem:nth-of-type(5) { order: 5; }
+    .ytp-menuitem:nth-of-type(6) { order: 6; }
+    .ytp-menuitem:nth-of-type(7) { order: 7; }
+    .ytp-menuitem:nth-of-type(3) { order: 1; }*/
 }
